[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-recorder"
version = "1.3.0"
description = "MQTT recorder tool"
readme = "README.md"
authors = [{ name = "RPDSWTK" }]
license = { file = "LICENSE" }
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "paho-mqtt >= 2.0.0",
    "tqdm >= 4.65.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/rpdswtk/mqtt_recorder"

[project.scripts]
"mqtt-recorder" = "mqtt_recorder.__main__:main"